syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.robothouse.grpcauth.proto";
option java_outer_classname = "GrpcAuthProto";

import "google/protobuf/empty.proto";

service AuthService {
  rpc Authenticate(google.protobuf.Empty) returns (AuthResponse);
}

message AuthPayload {
  bool success = 1;
  int32 status_code = 2;
  string status_message = 3;
}

message AuthResponse {
  // The unique request identifier.
  string request_id = 1;
  // The date/time when the response was generated.
  string datetime = 2;
  // Nested payload containing the authentication result.
  AuthPayload payload = 3;
}
